@@ -13,8 +13,8 @@ import org.springframework.ui.Model;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
 import site.facade.AdminService;
 import site.facade.BackgroundJobService;
 import site.facade.TicketService;
@@ -23,8 +23,7 @@ import site.model.Registrant;
 import site.model.Visitor;
 import site.model.VisitorStatus;
 
-import javax.validation.Valid;
-import java.util.Collections;
+import jakarta.validation.Valid;
 import java.util.List;
 
 /**
@@ -50,13 +49,13 @@ public class AdminRegistrantController {
     @Autowired
     private BackgroundJobService jobService;
 
-    @RequestMapping(value = "/view", method = RequestMethod.GET)
+    @GetMapping("/view")
     public String viewRegistrants(Model model) {
         model.addAttribute("registrants", adminFacade.findAllRegistrants());
         return REGISTRANT_VIEW_JSP;
     }
 
-    @RequestMapping(value = "/add", method = RequestMethod.GET)
+    @GetMapping("/add")
     public String getNewRegistrantForm(Model model) {
         model.addAttribute("registrant", new Registrant());
         model.addAttribute("paymentTypes", Registrant.PaymentType.values());
@@ -64,16 +63,16 @@ public class AdminRegistrantController {
         return REGISTRANT_EDIT_JSP;
     }
 
-    @RequestMapping(value = "/edit/{itemId}", method = RequestMethod.GET)
-    public String getEditRegistrantForm(@PathVariable("itemId") Long itemId, Model model) {
+    @GetMapping("/edit/{itemId}")
+    public String getEditRegistrantForm(@PathVariable Long itemId, Model model) {
         model.addAttribute("registrant", adminFacade.findOneRegistrant(itemId));
         model.addAttribute("paymentTypes", Registrant.PaymentType.values());
         model.addAttribute("branches", Branch.values());
         return REGISTRANT_EDIT_JSP;
     }
 
-    @RequestMapping(value = "/{itemId}/addVisitor", method = RequestMethod.GET)
-    public String getAddVisitorToRegistrantForm(@PathVariable("itemId") Long itemId, Model model) {
+    @GetMapping("/{itemId}/addVisitor")
+    public String getAddVisitorToRegistrantForm(@PathVariable Long itemId, Model model) {
         Visitor visitor = new Visitor();
         visitor.setRegistrant(adminFacade.findOneRegistrant(itemId));
         model.addAttribute("visitor", visitor);
@@ -81,7 +80,7 @@ public class AdminRegistrantController {
         return AdminVisitorController.VISITOR_EDIT_JSP;
     }
 
-    @RequestMapping(value = "/add", method = RequestMethod.POST)
+    @PostMapping("/add")
     public String addRegistrant(@Valid final Registrant registrant, BindingResult bindingResult,
         Model model) {
         if (bindingResult.hasErrors()) {
@@ -93,13 +92,13 @@ public class AdminRegistrantController {
     }
 
     @GetMapping(value = "/remove/{itemId}")
-    public String remove(@PathVariable("itemId") Long itemId) {
+    public String remove(@PathVariable Long itemId) {
         adminFacade.deleteRegistrant(itemId);
         return "redirect:/admin/registrant/view";
     }
 
     @GetMapping(value = "/send-tickets/{itemId}")
-    public String sendTicketsForRegistrant(@PathVariable("itemId") Long itemId, Model model) {
+    public String sendTicketsForRegistrant(@PathVariable Long itemId, Model model) {
         Registrant registrant = adminFacade.findOneRegistrant(itemId);
 
         List<Visitor> visitors = registrant.getVisitors();
@@ -129,7 +128,7 @@ public class AdminRegistrantController {
         }
 
         List<Pair<Visitor, Boolean>> result = ticketService.generateAndSendTicketEmail(visitor.anyEmail(),
-            Collections.singletonList(visitor));
+            List.of(visitor));
 
         return result.stream().map(Pair::getValue).reduce(true, (a, b) -> a && b);
     }
