@@ -8,8 +8,8 @@ import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
 import site.config.Globals;
 import site.facade.UserService;
 import site.model.Session;
@@ -32,20 +32,20 @@ public class AgendaController {
 	private boolean agenda;
 
 	//read a single agenda post
-    @RequestMapping("/agenda/{id}")
-    public String getById(@PathVariable("id") final long id, Model model) {
+    @GetMapping("/agenda/{id}")
+    public String getById(@PathVariable final long id, Model model) {
 	   model.addAttribute("tags", userFacade.findAllTags());
 		model.addAttribute("jprime_year", Globals.CURRENT_BRANCH.getStartDate().getYear());
     	Session talk = userService.findSessionTalk(id);
     	if (talk == null) {
-			logger.error(String.format("Invalid session id (%1$d)", id));
+			logger.error("Invalid session id (%1$d)".formatted(id));
     		return "/404.jsp";
 		}
     	model.addAttribute("talk", talk);
         return "/talk.jsp";
     }
     
-    @RequestMapping("/agenda")
+    @GetMapping("/agenda")
 	public String getAgenda(Model model) {
 	   model.addAttribute("tags", userFacade.findAllTags());
 
